# FitBuddy

./: .dockerignore  .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_29_2126-0b13ac4f8cea_created_main_users_logic.py  2025_06_30_0123-fce687766744_created_train_model.py  2025_06_30_1458-968d80177842_create_food_model.py
src/: __init__.py  main.py  prestart.sh  settings.py
src/alembic/: env.py
src/alembic/versions/: 2025_07_03_0223-f2bbc5a55be4_wtf.py
src/core/: __init__.py
src/database/: __init__.py  base.py  food.py  init.py  trains.py  users.py
src/database/init/: __init__.py  init.py
src/food/: __init__.py  crud.py  dependencies.py  models.py  schemas.py  views.py
src/trains/: __init__.py  crud.py  dependencies.py  enums.py  models.py  schemas.py  views.py
src/users/: __init__.py  crud.py  dependencies.py  jwt.py  models.py  password.py  schemas.py  views.py
src/users/certs/: private.pem  public.pem
